Добавлена начальная разметка страницы товара

--- a/catalog.html
+++ b/catalog.html
@@ -34,17 +34,17 @@
   </header>
 
   <main class="container">
-    <h1 class="headline">Средства для ухода</h1>
+    <h1 class="headline-main">Средства для ухода</h1>
     <ul class="breadcrumbs">
-        <li>
-            <a href="index.html">Главная</a>
-        </li>
-        <li>
-            <a href="shop.html">Магазин</a>
-        </li>
-        <li>
-            <a>Средства для ухода</a>
-        </li>
+      <li>
+        <a href="index.html">Главная</a>
+      </li>
+      <li>
+        <a href="shop.html">Магазин</a>
+      </li>
+      <li>
+        <a>Средства для ухода</a>
+      </li>
     </ul>
     <section class="catalog">
       <section class="filters">
@@ -54,66 +54,66 @@
       <section class="goods">
         <h2 class="visually-hid">Каталог товаров</h2>
         <ul class="goods-list">
-            <li class="goods-item">
-                <figure class="item-image">
-                    <img src="img/catalog-1.jpg" alt="Набор для путешествий «Baxter of california»">
-                    <a href="#"><figcaption>Набор для путешествий <span>«Baxter of california»</span></figcaption></a>
-                </figure>
-                <div class="item-price">
-                    <p>2900 &#8381;</p>
-                    <a class="btn buy-btn" href="#">Купить</a>
-                </div>
-            </li>
-            <li class="goods-item">
-                <figure class="item-image">
-                    <img src="img/catalog-2.jpg" alt="Увлажняющий кондиционер «Baxter of california»">
-                    <a href="#"><figcaption>Увлажняющий кондиционер <span>«Baxter of california»</span></figcaption></a>
-                </figure>
-                <div class="item-price">
-                    <p>750 &#8381;</p>
-                    <a class="btn buy-btn" href="#">Купить</a>
-                </div>
-            </li>
-            <li class="goods-item">
-                <figure class="item-image">
-                    <img src="img/catalog-3.jpg" alt="Гель для волос «Suavecito»">
-                    <a href="#"><figcaption>Гель для волос <span>«Suavecito»</span></figcaption></a>
-                </figure>
-                <div class="item-price">
-                    <p>290 &#8381;</p>
-                    <a class="btn buy-btn" href="#">Купить</a>
-                </div>
-            </li>
-            <li class="goods-item">
-                <figure class="item-image">
-                    <img src="img/catalog-1.jpg" alt="Глина для укладки волос «American crew»">
-                    <a href="#"><figcaption>Глина для укладки волос <span>«American crew»</span></figcaption></a>
-                </figure>
-                <div class="item-price">
-                    <p>500 &#8381;</p>
-                    <a class="btn buy-btn" href="#">Купить</a>
-                </div>
-            </li>
-            <li class="goods-item">
-                <figure class="item-image">
-                    <img src="img/catalog-1.jpg" alt="Гель для волос «American crew»">
-                    <a href="#"><figcaption>Гель для волос <span>«American crew»</span></figcaption></a>
-                </figure>
-                <div class="item-price">
-                    <p>300 &#8381;</p>
-                    <a class="btn buy-btn" href="#">Купить</a>
-                </div>
-            </li>
-            <li class="goods-item">
-                <figure class="item-image">
-                    <img src="img/catalog-1.jpg" alt="Набор для бритья «Baxter of california»">
-                    <a href="#"><figcaption>Набор для бритья <span>«Baxter of california»</span></figcaption></a>
-                </figure>
-                <div class="item-price">
-                    <p>3900 &#8381;</p>
-                    <a class="btn buy-btn" href="#">Купить</a>
-                </div>
-            </li>
+          <li class="goods-item">
+            <figure class="item-image">
+              <img src="img/catalog-1.jpg" alt="Набор для путешествий «Baxter of california»">
+              <a href="#"><figcaption>Набор для путешествий <span>«Baxter of california»</span></figcaption></a>
+            </figure>
+            <div class="item-price">
+              <p>2900 &#8381;</p>
+              <a class="btn buy-btn" href="#">Купить</a>
+            </div>
+          </li>
+          <li class="goods-item">
+            <figure class="item-image">
+              <img src="img/catalog-2.jpg" alt="Увлажняющий кондиционер «Baxter of california»">
+              <a href="#"><figcaption>Увлажняющий кондиционер <span>«Baxter of california»</span></figcaption></a>
+            </figure>
+            <div class="item-price">
+              <p>750 &#8381;</p>
+              <a class="btn buy-btn" href="#">Купить</a>
+            </div>
+          </li>
+          <li class="goods-item">
+            <figure class="item-image">
+              <img src="img/catalog-3.jpg" alt="Гель для волос «Suavecito»">
+              <a href="#"><figcaption>Гель для волос <span>«Suavecito»</span></figcaption></a>
+            </figure>
+            <div class="item-price">
+              <p>290 &#8381;</p>
+              <a class="btn buy-btn" href="#">Купить</a>
+            </div>
+          </li>
+          <li class="goods-item">
+            <figure class="item-image">
+              <img src="img/catalog-4.jpg" alt="Глина для укладки волос «American crew»">
+              <a href="#"><figcaption>Глина для укладки волос <span>«American crew»</span></figcaption></a>
+            </figure>
+            <div class="item-price">
+              <p>500 &#8381;</p>
+              <a class="btn buy-btn" href="#">Купить</a>
+            </div>
+          </li>
+          <li class="goods-item">
+            <figure class="item-image">
+              <img src="img/catalog-5.jpg" alt="Гель для волос «American crew»">
+              <a href="#"><figcaption>Гель для волос <span>«American crew»</span></figcaption></a>
+            </figure>
+            <div class="item-price">
+              <p>300 &#8381;</p>
+              <a class="btn buy-btn" href="#">Купить</a>
+            </div>
+          </li>
+          <li class="goods-item">
+            <figure class="item-image">
+              <img src="img/catalog-6.jpg" alt="Набор для бритья «Baxter of california»">
+              <a href="#"><figcaption>Набор для бритья <span>«Baxter of california»</span></figcaption></a>
+            </figure>
+            <div class="item-price">
+              <p>3900 &#8381;</p>
+              <a class="btn buy-btn" href="#">Купить</a>
+            </div>
+          </li>
         </ul>
         <ul class="goods-nav">
           <li>
@@ -133,31 +133,31 @@
     </section>
   </main>
 
-    <footer class="footer">
-      <p class="footer-contacts">
-          Барбершоп «Бородинский»<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a href="map.html">Как нас найти?</a><br>
-          Телефон: +7 (812) 666-02-66
-      </p>
-      <div class="footer-social">
-        <b>Давайте дружить!</b>
-        <ul>
-          <li>
-            <a class="social-btn" href="#">Вконтакте</a>
-          </li>
-          <li>
-            <a class="social-btn" href="#">Фейсбук</a>
-          </li>
-          <li>
-            <a class="social-btn" href="#">Инстаграм</a>
-          </li>
-        </ul>
-      </div>
-      <p class="footer-copyright">
-        <b>Разработано:</b>
-        <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
-    </footer>
+  <footer class="footer">
+    <p class="footer-contacts">
+        Барбершоп «Бородинский»<br>
+        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+        <a href="map.html">Как нас найти?</a><br>
+        Телефон: +7 (812) 666-02-66
+    </p>
+    <div class="footer-social">
+      <b>Давайте дружить!</b>
+      <ul>
+        <li>
+          <a class="social-btn" href="#">Вконтакте</a>
+        </li>
+        <li>
+          <a class="social-btn" href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a class="social-btn" href="#">Инстаграм</a>
+        </li>
+      </ul>
+    </div>
+    <p class="footer-copyright">
+      <b>Разработано:</b>
+      <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+    </p>
+  </footer>
 </body>
 </html>
