Добавлена начальная разметка для страницы прайс-листа

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -45,6 +45,9 @@
       <li>
         <a href="catalog.html">Средства для ухода</a>
       </li>
+      <li>
+        <a class="breadcrumbs-current">Набор для путешествий <span class="upper-text">«Baxter of california»</span></a>
+      </li>
     </ul>
 
     <section class="item-gallery">
@@ -91,10 +94,10 @@
 
   <footer class="footer">
     <p class="footer-contacts">
-        Барбершоп «Бородинский»<br>
-        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-        <a href="map.html">Как нас найти?</a><br>
-        Телефон: +7 (812) 666-02-66
+      Барбершоп «Бородинский»<br>
+      Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+      <a href="map.html">Как нас найти?</a><br>
+      Телефон: +7 (812) 666-02-66
     </p>
     <div class="footer-social">
       <b>Давайте дружить!</b>
