--- a/catalog.html
+++ b/catalog.html
@@ -43,7 +43,7 @@
         <a href="shop.html">Магазин</a>
       </li>
       <li>
-        <a>Средства для ухода</a>
+        <a class="breadcrumbs-current">Средства для ухода</a>
       </li>
     </ul>
     <section class="catalog">
@@ -57,7 +57,7 @@
           <li class="goods-item">
             <figure class="item-image">
               <img src="img/catalog-1.jpg" alt="Набор для путешествий «Baxter of california»">
-              <a href="#"><figcaption>Набор для путешествий <span>«Baxter of california»</span></figcaption></a>
+              <a href="#"><figcaption>Набор для путешествий <span class="upper-text">«Baxter of california»</span></figcaption></a>
             </figure>
             <div class="item-price">
               <p>2900 &#8381;</p>
@@ -67,7 +67,7 @@
           <li class="goods-item">
             <figure class="item-image">
               <img src="img/catalog-2.jpg" alt="Увлажняющий кондиционер «Baxter of california»">
-              <a href="#"><figcaption>Увлажняющий кондиционер <span>«Baxter of california»</span></figcaption></a>
+              <a href="#"><figcaption>Увлажняющий кондиционер <span class="upper-text">«Baxter of california»</span></figcaption></a>
             </figure>
             <div class="item-price">
               <p>750 &#8381;</p>
@@ -77,7 +77,7 @@
           <li class="goods-item">
             <figure class="item-image">
               <img src="img/catalog-3.jpg" alt="Гель для волос «Suavecito»">
-              <a href="#"><figcaption>Гель для волос <span>«Suavecito»</span></figcaption></a>
+              <a href="#"><figcaption>Гель для волос <span class="upper-text">«Suavecito»</span></figcaption></a>
             </figure>
             <div class="item-price">
               <p>290 &#8381;</p>
@@ -87,7 +87,7 @@
           <li class="goods-item">
             <figure class="item-image">
               <img src="img/catalog-4.jpg" alt="Глина для укладки волос «American crew»">
-              <a href="#"><figcaption>Глина для укладки волос <span>«American crew»</span></figcaption></a>
+              <a href="#"><figcaption>Глина для укладки волос <span class="upper-text">«American crew»</span></figcaption></a>
             </figure>
             <div class="item-price">
               <p>500 &#8381;</p>
@@ -97,7 +97,7 @@
           <li class="goods-item">
             <figure class="item-image">
               <img src="img/catalog-5.jpg" alt="Гель для волос «American crew»">
-              <a href="#"><figcaption>Гель для волос <span>«American crew»</span></figcaption></a>
+              <a href="#"><figcaption>Гель для волос <span class="upper-text">«American crew»</span></figcaption></a>
             </figure>
             <div class="item-price">
               <p>300 &#8381;</p>
@@ -107,7 +107,7 @@
           <li class="goods-item">
             <figure class="item-image">
               <img src="img/catalog-6.jpg" alt="Набор для бритья «Baxter of california»">
-              <a href="#"><figcaption>Набор для бритья <span>«Baxter of california»</span></figcaption></a>
+              <a href="#"><figcaption>Набор для бритья <span class="upper-text">«Baxter of california»</span></figcaption></a>
             </figure>
             <div class="item-price">
               <p>3900 &#8381;</p>
@@ -135,10 +135,10 @@
 
   <footer class="footer">
     <p class="footer-contacts">
-        Барбершоп «Бородинский»<br>
-        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-        <a href="map.html">Как нас найти?</a><br>
-        Телефон: +7 (812) 666-02-66
+      Барбершоп «Бородинский»<br>
+      Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+      <a href="map.html">Как нас найти?</a><br>
+      Телефон: +7 (812) 666-02-66
     </p>
     <div class="footer-social">
       <b>Давайте дружить!</b>
