--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <h2 class="headline">Фотогалерея</h2>
       <figure class="gallery-content">
         <a href="#">
-          <img src="img/studio.jpg" width="286" height="164" alt="Интерьер">
+          <img src="img/gallery-1.jpg" width="328" height="164" alt="Интерьер">
         </a>
         <span class="btn gallery-btn gallery-btn-back">Назад</span>
         <span class="btn gallery-btn gallery-btn-next">Вперед</span>
