Добавлены размеры изображениям

--- a/catalog.html
+++ b/catalog.html
@@ -56,7 +56,7 @@
         <ul class="goods-list">
           <li class="goods-item">
             <figure class="item-image">
-              <img src="img/catalog-1.jpg" alt="Набор для путешествий «Baxter of california»">
+              <img src="img/catalog-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of california»">
               <a href="#"><figcaption>Набор для путешествий <span class="upper-text">«Baxter of california»</span></figcaption></a>
             </figure>
             <div class="item-price">
@@ -66,7 +66,7 @@
           </li>
           <li class="goods-item">
             <figure class="item-image">
-              <img src="img/catalog-2.jpg" alt="Увлажняющий кондиционер «Baxter of california»">
+              <img src="img/catalog-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of california»">
               <a href="#"><figcaption>Увлажняющий кондиционер <span class="upper-text">«Baxter of california»</span></figcaption></a>
             </figure>
             <div class="item-price">
@@ -76,7 +76,7 @@
           </li>
           <li class="goods-item">
             <figure class="item-image">
-              <img src="img/catalog-3.jpg" alt="Гель для волос «Suavecito»">
+              <img src="img/catalog-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
               <a href="#"><figcaption>Гель для волос <span class="upper-text">«Suavecito»</span></figcaption></a>
             </figure>
             <div class="item-price">
@@ -86,7 +86,7 @@
           </li>
           <li class="goods-item">
             <figure class="item-image">
-              <img src="img/catalog-4.jpg" alt="Глина для укладки волос «American crew»">
+              <img src="img/catalog-4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
               <a href="#"><figcaption>Глина для укладки волос <span class="upper-text">«American crew»</span></figcaption></a>
             </figure>
             <div class="item-price">
@@ -96,7 +96,7 @@
           </li>
           <li class="goods-item">
             <figure class="item-image">
-              <img src="img/catalog-5.jpg" alt="Гель для волос «American crew»">
+              <img src="img/catalog-5.jpg" width="220" height="165" alt="Гель для волос «American crew»">
               <a href="#"><figcaption>Гель для волос <span class="upper-text">«American crew»</span></figcaption></a>
             </figure>
             <div class="item-price">
@@ -106,7 +106,7 @@
           </li>
           <li class="goods-item">
             <figure class="item-image">
-              <img src="img/catalog-6.jpg" alt="Набор для бритья «Baxter of california»">
+              <img src="img/catalog-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of california»">
               <a href="#"><figcaption>Набор для бритья <span class="upper-text">«Baxter of california»</span></figcaption></a>
             </figure>
             <div class="item-price">
