--- a/catalog-item.html
+++ b/catalog-item.html
@@ -53,17 +53,17 @@
     <section class="item-gallery">
       <h2 class="visually-hid">Галерея товара</h2>
       <figure class="mid-image">
-        <img src="img/gallery-item-1.jpg" alt="Фото товара">
+        <img src="img/gallery-item-1.jpg" width="980" height="1062" alt="Фото товара">
       </figure>
       <ul class="gallery-list">
         <li class="gallery-item">
-          <img src="img/gallery-item-2.jpg" alt="Фото товара">
+          <img src="img/gallery-item-2.jpg" width="140" height="149" alt="Фото товара">
         </li>
         <li class="gallery-item">
-          <img src="img/gallery-item-3.jpg" alt="Фото товара">
+          <img src="img/gallery-item-3.jpg" width="140" height="149" alt="Фото товара">
         </li>
         <li class="gallery-item">
-          <img src="img/gallery-item-4.jpg" alt="Фото товара">
+          <img src="img/gallery-item-4.jpg" width="140" height="149" alt="Фото товара">
         </li>
       </ul>
     </section>
