--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         </li>
       </ul>
       <ul class="user-nav">
-        <li class="login-link">Вход</li>
+        <li class="login-link">
+          <a class="user-login-link" href="login.html">Вход</a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -74,9 +76,9 @@
         <a href="#">
           <img src="img/gallery-1.jpg" width="286" height="164" alt="Интерьер">
         </a>
-        <span class="btn gallery-btn gallery-btn-back">Назад</span>
-        <span class="btn gallery-btn gallery-btn-next">Вперед</span>
       </figure>
+      <button class="btn gallery-btn gallery-btn-back" type="button">Назад</button>
+      <button class="btn gallery-btn gallery-btn-next" type="button">Вперед</button>
     </section>
 
     <section class="contacts">
@@ -98,7 +100,25 @@
     <section class="appointment">
       <h2 class="headline">Записаться</h2>
       <p class="appointment-info">Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
-      <!-- Место для формы -->
+      <form class="appoint-form" id="appointment-form" action="https://echo.htmlacademy.ru">
+        <p class="appoint-paragraph">
+          <label class="appoint-headline" for="date-field">Дата</label>
+          <input class="appoint-field" type="text" name="date" id="date-field">
+        </p>
+        <p class="appoint-paragraph">
+          <label class="appoint-headline" for="time-field">Время</label>
+          <input class="appoint-field" type="text" name="time" id="time-field">
+        </p>
+        <p class="appoint-paragraph">
+          <label class="appoint-headline" for="name-field">Ваше имя</label>
+          <input class="appoint-field" type="text" name="name" id="name-field">
+        </p>
+        <p class="appoint-paragraph">
+          <label class="appoint-headline" for="phone-field">Телефон</label>
+          <input class="appoint-field" type="phone" name="phone" id="phone-field">
+        </p>
+        <button class="btn appoint-btn" type="submit" form="appointment-form" name="appointment-submit">Отправить</button>
+      </form>
     </section>
   </main>
 
@@ -106,39 +126,57 @@
     <p class="footer-contacts">
       Барбершоп «Бородинский»<br>
       Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-      <a href="map.html">Как нас найти?</a><br>
+      <a class="map-link" href="map.html">Как нас найти?</a><br>
       Телефон: +7 (812) 666-02-66
     </p>
     <div class="footer-social">
       <b>Давайте дружить!</b>
       <ul>
         <li>
-          <a class="social-btn" href="#">Вконтакте</a>
+          <a class="social-btn" aria-label="Вконтакте" href="vk.com">Вконтакте</a>
         </li>
         <li>
-          <a class="social-btn" href="#">Фейсбук</a>
+          <a class="social-btn" aria-label="Фейсбук" href="facebook.com">Фейсбук</a>
         </li>
         <li>
-          <a class="social-btn" href="#">Инстаграм</a>
+          <a class="social-btn" aria-label="Инстаграм" href="instagram.com">Инстаграм</a>
         </li>
       </ul>
     </div>
     <p class="footer-copyright">
       <b>Разработано:</b>
-      <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+      <a class="btn copyright-btn" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
     </p>
   </footer>
 
   <section class="modal modal-login">
     <h2 class="headline">Личный кабинет</h2>
     <p>Введите свой логин и пароль.</p>
-    <!-- Место для формы -->
-    <span class="modal-close">x</span>
+    <form class="modal-form modal-login" id="login-form">
+      <p class="modal-form-paragraph">
+        <label class="visually-hid" for="login-field">Логин</label>
+        <input class="modal-field" type="text" name="login" id="login-field">
+      </p>
+      <p class="modal-form-paragraph">
+        <label class="visually-hid" for="login-field">Пароль</label>
+        <input class="modal-field" type="password" name="pass" id="pass-field">
+      </p>
+      <p class="modal-form-paragraph">
+        <label class="modal-label">
+          <input class="modal-checkbox" type="checkbox" name="checkbox" checked>
+          Запомните меня
+        </label>
+        <a class="modal-link" href="#">Я забыл пароль!</a>
+      </p>
+      <button class="btn modal-btn" type="submit" form="login-form">Войти</button>
+    </form>
+    <button class="modal-close" aria-label="Закрыть окно входа" type="button">x</button>
   </section>
 
   <section class="modal modal-map">
-    <h2 class="visually-hidden">Как до нас добраться</h2>
-    <span class="modal-close">x</span>
+    <h2 class="visually-hid">Как до нас добраться</h2>
+    <!-- Место для карты -->
+    <button class="modal-close" aria-label="Закрыть окно карты" type="button">x</button>
   </section>
 
   <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
