--- a/price.html
+++ b/price.html
@@ -7,8 +7,8 @@
 <body class="page item">
   <header class="header">
     <nav class="main-nav">
-      <a class="logo" href="index.html">
-        <img src="img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
+      <a class="logo" href="index.html" aria-label="Переход на главную страницу">
+        <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
       </a>
       <ul class="site-nav">
         <li>
@@ -28,7 +28,9 @@
         </li>
       </ul>
       <ul class="user-nav">
-        <li class="login-link">Вход</li>
+        <li class="login-link">
+          <a class="user-login-link" href="login.html">Вход</a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -90,27 +92,52 @@
     <p class="footer-contacts">
       Барбершоп «Бородинский»<br>
       Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-      <a href="map.html">Как нас найти?</a><br>
+      <a class="map-link" href="map.html">Как нас найти?</a><br>
       Телефон: +7 (812) 666-02-66
     </p>
     <div class="footer-social">
       <b>Давайте дружить!</b>
       <ul>
         <li>
-          <a class="social-btn" href="#">Вконтакте</a>
+          <a class="social-btn" aria-label="Вконтакте" href="vk.com">Вконтакте</a>
         </li>
         <li>
-          <a class="social-btn" href="#">Фейсбук</a>
+          <a class="social-btn" aria-label="Фейсбук" href="facebook.com">Фейсбук</a>
         </li>
         <li>
-          <a class="social-btn" href="#">Инстаграм</a>
+          <a class="social-btn" aria-label="Инстаграм" href="instagram.com">Инстаграм</a>
         </li>
       </ul>
     </div>
     <p class="footer-copyright">
       <b>Разработано:</b>
-      <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+      <a class="btn copyright-btn" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
     </p>
   </footer>
+
+  <section class="modal modal-login">
+    <h2 class="headline">Личный кабинет</h2>
+    <p>Введите свой логин и пароль.</p>
+    <form class="modal-form modal-login" id="login-form">
+      <p class="modal-form-paragraph">
+        <label class="visually-hid" for="login-field">Логин</label>
+        <input class="modal-field" type="text" name="login" id="login-field">
+      </p>
+      <p class="modal-form-paragraph">
+        <label class="visually-hid" for="login-field">Пароль</label>
+        <input class="modal-field" type="password" name="pass" id="pass-field">
+      </p>
+      <p class="modal-form-paragraph">
+        <label class="modal-label">
+          <input class="modal-checkbox" type="checkbox" name="checkbox" checked>
+          Запомните меня
+        </label>
+        <a class="modal-link" href="#">Я забыл пароль!</a>
+      </p>
+      <button class="btn modal-btn" type="submit" form="login-form">Войти</button>
+    </form>
+    <button class="modal-close" aria-label="Закрыть окно входа" type="button">x</button>
+  </section>
+  
 </body>
 </html>
