--- a/price.html
+++ b/price.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Прайс-лист</title>
+  <meta charset="utf-8">
+  <title>Прайс-лист</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
-<body class="page item">
+<body class="page inner price">
   <header class="header">
     <nav class="main-nav">
       <a class="logo" href="index.html" aria-label="Переход на главную страницу">
@@ -39,10 +41,10 @@
     <h1 class="headline-main">Прайс-лист</h1>
     <ul class="breadcrumbs">
       <li>
-        <a href="index.html">Главная</a>
+        <a class="breadcrumbs-link" href="index.html">Главная</a>
       </li>
       <li>
-        <a class="breadcrumbs-current">Прайс-лист</a>
+        <a class="breadcrumbs-link breadcrumbs-current">Прайс-лист</a>
       </li>
     </ul>
 
