--- a/catalog-item.html
+++ b/catalog-item.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Набор для путешествий «Baxter of california»</title>
+  <meta charset="utf-8">
+  <title>Набор для путешествий «Baxter of california»</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
-<body class="page item">
+<body class="page inner item">
   <header class="header">
     <nav class="main-nav">
       <a class="logo" href="index.html" aria-label="Переход на главную страницу">
@@ -39,16 +41,16 @@
     <h1 class="headline-main">Набор для путешествий «Baxter of california»</h1>
     <ul class="breadcrumbs">
       <li>
-        <a href="index.html">Главная</a>
+        <a class="breadcrumbs-link" href="index.html">Главная</a>
       </li>
       <li>
-        <a href="shop.html">Магазин</a>
+        <a class="breadcrumbs-link" href="shop.html">Магазин</a>
       </li>
       <li>
-        <a href="catalog.html">Средства для ухода</a>
+        <a class="breadcrumbs-link" href="catalog.html">Средства для ухода</a>
       </li>
       <li>
-        <a class="breadcrumbs-current">Набор для путешествий <span class="upper-text">«Baxter of california»</span></a>
+        <a class="breadcrumbs-link breadcrumbs-current">Набор для путешествий <span class="upper-text">«Baxter of california»</span></a>
       </li>
     </ul>
 
@@ -59,13 +61,19 @@
       </figure>
       <ul class="gallery-list">
         <li class="gallery-item">
-          <img src="img/gallery-item-2.jpg" width="140" height="149" alt="Фото товара">
+          <a href="mid-image.html" area-label="Выбрать картинку в превью">
+            <img src="img/gallery-item-2.jpg" width="140" height="149" alt="Фото товара">
+          </a>
         </li>
         <li class="gallery-item">
-          <img src="img/gallery-item-3.jpg" width="140" height="149" alt="Фото товара">
+          <a href="mid-image.html" area-label="Выбрать картинку в превью">
+            <img src="img/gallery-item-3.jpg" width="140" height="149" alt="Фото товара">
+          </a>
         </li>
         <li class="gallery-item">
-          <img src="img/gallery-item-4.jpg" width="140" height="149" alt="Фото товара">
+          <a href="mid-image.html" area-label="Выбрать картинку в превью">
+            <img src="img/gallery-item-4.jpg" width="140" height="149" alt="Фото товара">
+          </a>
         </li>
       </ul>
     </section>
